[package]
name = "reference"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
fxhash = "0.2.1"
indicatif = { version = "0.17.11", default-features = false, features = ["rayon", "unicode-width"] }
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
num-traits = "0.2.19"
rayon = "1.10.0"
smallvec = "1.15.1"
tempfile = "3.20.0"
twobit = "0.2.1"
zip = { version = "4.2.0", default-features = false, features = ["deflate"] }

